gitlab test new runner

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -266,8 +266,8 @@ deploy-dev:
     - .do_strategy
   services:
     - name: docker:dind
-      privileged: true
-      # alias: docker
+      alias: docker
+      # privileged: true
   variables:
     NAMESPACE: dev
   # services:
