--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,7 @@ test-app:
   stage: test
   rules:
     - changes:
-        - .gitlab-ci.yml
+        # - .gitlab-ci.yml
         - app/*
         - data_test/*
         - model/*
@@ -119,7 +119,7 @@ test-app_admin:
   stage: test
   rules:
     - changes:
-        - .gitlab-ci.yml
+        # - .gitlab-ci.yml
         - app_admin/*
         - data_test/*
         - model/*
@@ -135,7 +135,7 @@ test-app_form:
   stage: test
   rules:
     - changes:
-        - .gitlab-ci.yml
+        # - .gitlab-ci.yml
         - app_form/*
         - data_test/*
         - functions/*
@@ -166,7 +166,7 @@ build-app:
   image: docker:latest
   rules:
     - changes:
-        - .gitlab-ci.yml
+        # - .gitlab-ci.yml
         - app/*
   extends: 
     - .do_dind
@@ -184,7 +184,7 @@ build-app_admin:
   image: docker:latest
   rules:
     - changes:
-        - .gitlab-ci.yml
+        # - .gitlab-ci.yml
         - app_admin/*
   extends: 
     - .do_dind
@@ -202,7 +202,7 @@ build-app_dash:
   image: docker:latest
   rules:
     - changes:
-        - .gitlab-ci.yml
+        # - .gitlab-ci.yml
         - app_dash/*
   extends: 
     - .do_dind
@@ -220,7 +220,7 @@ build-app_form:
   image: docker:latest
   rules:
     - changes:
-        - .gitlab-ci.yml
+        # - .gitlab-ci.yml
         - app_form/*
   extends: 
     - .do_dind
