--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -289,6 +289,7 @@ deploy-dev:
     # - sudo chmod -R 755 data
     # - sudo chown -R gitlab-runner:gitlab-runner .
     - pwd
+    - ip addr
     - echo "Checking DNS configuration"
     - cat /etc/resolv.conf
     - echo "Listing hosts"
