--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -273,6 +273,7 @@ deploy-dev:
     NAMESPACE: dev
   # variables:
   #   DOCKER_HOST: tcp://docker:2375 
+  #   DOCKER_HOST: unix:///var/run/docker.sock
   #   DOCKER_TLS_CERTDIR: ""
   environment:
     name: $NAMESPACE-$CI_BUILD_REF_NAME
