gitlab test new runner

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -260,7 +260,7 @@ deploy-dev:
   image: docker:latest
   # image: docker:24.0.5
   tags:
-    - deploy-volume
+    - test-mongo
   # timeout: 2h 
   extends: 
     - .do_dind
