--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -289,6 +289,7 @@ deploy-dev:
     # - sudo chown -R gitlab-runner:gitlab-runner .
     - pwd
     - docker ps
+    - docker version
     - echo "Checking DNS configuration"
     - cat /etc/resolv.conf
     - echo "Listing hosts"
