--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -258,12 +258,14 @@ stop-dev:
 deploy-dev:
   stage: deploy-dev
   image: docker:latest
-  # image: docker:24.0.5
+  image: docker:24.0.5
+  services:
+    - docker:24.0.5-dind
   tags:
     - deploy-volume
   # timeout: 2h 
   extends: 
-    - .do_dind
+    # - .do_dind
     - .do_strategy
   # services:
   #   - name: docker:dind
