--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -184,6 +184,7 @@ test-app_form:
     - pip install -r requirements.txt
     - pip install pytest
     - pip install --upgrade pyOpenSSL
+    - pip install pandas==2.0.3
     - python3 ../init_db.py
     # - python3 -m pytest tests/
 
