--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,6 +111,10 @@ test-app_admin:
   services:
     - name: mongo:4.4
       alias: mongodb
+  cache:
+    key: ${CI_JOB_NAME}
+    paths:
+      - .cache/pip/
   variables:
     MONGO_INITDB_ROOT_USERNAME: root
     MONGO_INITDB_ROOT_PASSWORD: root
@@ -126,11 +130,9 @@ test-app_admin:
     - cp -r model app_admin/model
     - cp -r functions app_admin/functions
     - cd app_admin/
-    - pip install --upgrade pip
-    - apt-get update
-    - pip install -r requirements.txt
-    - pip install pytest
-    - pip install --upgrade pyOpenSSL
+    - pip install --cache-dir=.cache/pip -r requirements.txt
+    - pip install --cache-dir=.cache/pip pytest
+    - pip install --cache-dir=.cache/pip --upgrade pyOpenSSL
     - python3 ../init_db.py
     # - python3 -m pytest tests/
 
@@ -147,6 +149,10 @@ test-app_form:
   services:
     - name: mongo:4.4
       alias: mongodb
+  cache:
+    key: ${CI_JOB_NAME}
+    paths:
+      - .cache/pip/
   variables:
     MONGO_INITDB_ROOT_USERNAME: root
     MONGO_INITDB_ROOT_PASSWORD: root
@@ -161,12 +167,10 @@ test-app_form:
     - cp -r data_test app_form/data_test
     - cp -r functions app_form/functions
     - cd app_form/
-    - pip install --upgrade pip
-    - apt-get update
-    - pip install -r requirements.txt
-    - pip install pytest
-    - pip install --upgrade pyOpenSSL
-    - pip install pandas==2.0.3
+    - pip install --cache-dir=.cache/pip -r requirements.txt
+    - pip install --cache-dir=.cache/pip pytest
+    - pip install --cache-dir=.cache/pip --upgrade pyOpenSSL
+    - pip install --cache-dir=.cache/pip pandas==2.0.3
     - python3 ../init_db.py
     # - python3 -m pytest tests/
 
@@ -184,6 +188,10 @@ test-app_dash:
   services:
     - name: mongo:4.4
       alias: mongodb
+  cache:
+    key: ${CI_JOB_NAME}
+    paths:
+      - .cache/pip/
   variables:
     MONGO_INITDB_ROOT_USERNAME: root
     MONGO_INITDB_ROOT_PASSWORD: root
@@ -199,11 +207,9 @@ test-app_dash:
     - cp -r model app_dash/model
     - cp -r functions app_dash/functions
     - cd app_dash/
-    - pip install --upgrade pip
-    - apt-get update
-    - pip install -r requirements.txt
-    - pip install pytest
-    - pip install --upgrade pyOpenSSL
+    - pip install --cache-dir=.cache/pip -r requirements.txt
+    - pip install --cache-dir=.cache/pip pytest
+    - pip install --cache-dir=.cache/pip --upgrade pyOpenSSL
     - python3 ../init_db.py
     # - python3 -m pytest tests/
 
@@ -285,10 +291,10 @@ build-app_form:
     - docker push $APP_FORM_IMAGE:latest
 
 # =====================================================================================
-# =================================== DEPLOYING =======================================
+# ================================== DEV DEPLOYING ====================================
 # =====================================================================================
 
-# =================================== STOP STAGES =====================================
+# =================================== MONGO =====================================
 stop-dev-mongo:
   stage: deploy-dev
   image: docker:latest
@@ -305,71 +311,6 @@ stop-dev-mongo:
     - echo "Stopping app environment..."
     - docker-compose -f docker-compose.mongo.yml down
 
-stop-dev-app:
-  stage: deploy-dev
-  image: docker:latest
-  extends: 
-    - .do_dind
-    - .do_strategy
-  variables:
-    NAMESPACE: dev
-  when: manual
-  environment:
-    name: $NAMESPACE-$CI_BUILD_REF_NAME
-    action: stop
-  script:
-    - echo "Stopping app environment..."
-    - docker-compose -f docker-compose.app.yml down
-    
-stop-dev-app_admin:
-  stage: deploy-dev
-  image: docker:latest
-  extends: 
-    - .do_dind
-    - .do_strategy
-  variables:
-    NAMESPACE: dev
-  when: manual
-  environment:
-    name: $NAMESPACE-$CI_BUILD_REF_NAME
-    action: stop
-  script:
-    - echo "Stopping app environment..."
-    - docker-compose -f docker-compose.app_admin.yml down
-    
-stop-dev-app_dash:
-  stage: deploy-dev
-  image: docker:latest
-  extends: 
-    - .do_dind
-    - .do_strategy
-  variables:
-    NAMESPACE: dev
-  when: manual
-  environment:
-    name: $NAMESPACE-$CI_BUILD_REF_NAME
-    action: stop
-  script:
-    - echo "Stopping app environment..."
-    - docker-compose -f docker-compose.app_dash.yml down
-    
-stop-dev-app_form:
-  stage: deploy-dev
-  image: docker:latest
-  extends: 
-    - .do_dind
-    - .do_strategy
-  variables:
-    NAMESPACE: dev
-  when: manual
-  environment:
-    name: $NAMESPACE-$CI_BUILD_REF_NAME
-    action: stop
-  script:
-    - echo "Stopping app environment..."
-    - docker-compose -f docker-compose.app_form.yml down
-
-# =================================== DEPLOY STAGES ===================================
 deploy-dev-mongo:
   stage: deploy-dev
   image: docker:latest
@@ -402,6 +343,24 @@ deploy-dev-mongo:
     - echo "Liste des conteneurs Docker"
     - docker info
     - docker ps
+
+# =================================== APP =====================================
+
+stop-dev-app:
+  stage: deploy-dev
+  image: docker:latest
+  extends: 
+    - .do_dind
+    - .do_strategy
+  variables:
+    NAMESPACE: dev
+  when: manual
+  environment:
+    name: $NAMESPACE-$CI_BUILD_REF_NAME
+    action: stop
+  script:
+    - echo "Stopping app environment..."
+    - docker-compose -f docker-compose.app.yml down
 
 deploy-dev-app:
   stage: deploy-dev
@@ -439,6 +398,24 @@ deploy-dev-app:
     - docker info
     - docker ps
 
+# =================================== APP_ADMIN =====================================
+
+stop-dev-app_admin:
+  stage: deploy-dev
+  image: docker:latest
+  extends: 
+    - .do_dind
+    - .do_strategy
+  variables:
+    NAMESPACE: dev
+  when: manual
+  environment:
+    name: $NAMESPACE-$CI_BUILD_REF_NAME
+    action: stop
+  script:
+    - echo "Stopping app environment..."
+    - docker-compose -f docker-compose.app_admin.yml down
+    
 deploy-dev-app_admin:
   stage: deploy-dev
   image: docker:latest
@@ -476,7 +453,25 @@ deploy-dev-app_admin:
     - echo "Liste des conteneurs Docker"
     - docker info
     - docker ps
+    
+# =================================== APP_DASH =====================================
 
+stop-dev-app_dash:
+  stage: deploy-dev
+  image: docker:latest
+  extends: 
+    - .do_dind
+    - .do_strategy
+  variables:
+    NAMESPACE: dev
+  when: manual
+  environment:
+    name: $NAMESPACE-$CI_BUILD_REF_NAME
+    action: stop
+  script:
+    - echo "Stopping app environment..."
+    - docker-compose -f docker-compose.app_dash.yml down
+    
 deploy-dev-app_dash:
   stage: deploy-dev
   image: docker:latest
@@ -512,6 +507,24 @@ deploy-dev-app_dash:
     - echo "Liste des conteneurs Docker"
     - docker info
     - docker ps
+    
+# =================================== APP_FORM =====================================
+
+stop-dev-app_form:
+  stage: deploy-dev
+  image: docker:latest
+  extends: 
+    - .do_dind
+    - .do_strategy
+  variables:
+    NAMESPACE: dev
+  when: manual
+  environment:
+    name: $NAMESPACE-$CI_BUILD_REF_NAME
+    action: stop
+  script:
+    - echo "Stopping app environment..."
+    - docker-compose -f docker-compose.app_form.yml down
 
 deploy-dev-app_form:
   stage: deploy-dev
@@ -548,6 +561,10 @@ deploy-dev-app_form:
     - echo "Liste des conteneurs Docker"
     - docker info
     - docker ps
+
+# =====================================================================================
+# ================================== PROD DEPLOYING ===================================
+# =====================================================================================
 
 # deploy-prod:
 #   stage: deploy-prod
