--- a/docker-compose.mongo.yml
+++ b/docker-compose.mongo.yml
@@ -6,10 +6,11 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_LOGIN}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
+      # MONGO_LISTEN_IP: 127.0.0.1  # Limiter MongoDB pour qu'il écoute uniquement sur localhost
     volumes:
       - ./data:/data/db
-    ports:
-      - 27017:27017
+    # ports:
+    #   - 27017:27017
     networks:
       - shared_net
 
