--- a/docker-compose.app_admin.yml
+++ b/docker-compose.app_admin.yml
@@ -26,3 +26,9 @@ services:
       - CLIENT_ID_LH=${CLIENT_ID_LH}
       - CLIENT_SECRET_LH=${CLIENT_SECRET_LH}
     command: ./start.sh
+    networks:
+      - shared_net
+
+networks:
+  shared_net:
+    external: true
