--- a/docker-compose.app_dash.yml
+++ b/docker-compose.app_dash.yml
@@ -16,3 +16,9 @@ services:
       - FLASK_USER_PASSWORD=${FLASK_USER_PASSWORD}
       - FLASK_SECRET_KEY=${FLASK_SECRET_KEY}
     command: python app.py
+    networks:
+      - shared_net
+
+networks:
+  shared_net:
+    external: true
