--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -339,6 +339,7 @@ deploy-dev-mongo:
     - echo "Creating network shared_net if it doesn't exist..."
     - docker network ls | grep -q shared_net || docker network create shared_net
     - echo "Démarrage des services avec docker-compose..."
+    - docker stop dstair_mongodb # Arrête le container si existant
     - docker-compose -f docker-compose.mongo.yml up -d
     # - docker-compose up
     - echo "Affichage des logs de docker-compose"
@@ -396,6 +397,7 @@ deploy-dev-app:
     - echo "Creating network shared_net if it doesn't exist..."
     - docker network ls | grep -q shared_net || docker network create shared_net
     - echo "Démarrage des services avec docker-compose..."
+    - docker stop dstair_flask_app # Arrête le container si existant
     - docker-compose -f docker-compose.app.yml up -d
     # - docker-compose up
     - echo "Affichage des logs de docker-compose"
@@ -455,6 +457,7 @@ deploy-dev-app_admin:
     - echo "Creating network shared_net if it doesn't exist..."
     - docker network ls | grep -q shared_net || docker network create shared_net
     - echo "Démarrage des services avec docker-compose..."
+    - docker stop dstair_app_admin # Arrête le container si existant
     - docker-compose -f docker-compose.app_admin.yml up -d
     # - docker-compose up
     - echo "Affichage des logs de docker-compose"
@@ -512,6 +515,7 @@ deploy-dev-app_dash:
     - echo "Creating network shared_net if it doesn't exist..."
     - docker network ls | grep -q shared_net || docker network create shared_net
     - echo "Démarrage des services avec docker-compose..."
+    - docker stop dstair_app_dash # Arrête le container si existant
     - docker-compose -f docker-compose.app_dash.yml up -d
     # - docker-compose up
     - echo "Affichage des logs de docker-compose"
@@ -569,6 +573,7 @@ deploy-dev-app_form:
     - echo "Creating network shared_net if it doesn't exist..."
     - docker network ls | grep -q shared_net || docker network create shared_net
     - echo "Démarrage des services avec docker-compose..."
+    - docker stop dstair_flask_app_form # Arrête le container si existant
     - docker-compose -f docker-compose.app_form.yml up -d
     # - docker-compose up
     - echo "Affichage des logs de docker-compose"
